--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
     "astro": "^4.4.6",
     "tailwindcss": "^3.4.1",
     "tailwindcss-animated": "^1.0.1"
+  },
+  "devDependencies": {
+    "install": "^0.13.0",
+    "npm": "^10.5.0",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
